--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
 		"cookie-parser": "~1.4.3",
 		"debug": "~2.6.9",
 		"express": "~4.16.0",
+		"express-session": "^1.15.6",
 		"http-errors": "~1.6.2",
 		"morgan": "~1.9.0",
-		"pug": "2.0.0-beta11"
+		"pug": "2.0.0-beta11",
+		"steam-login": "^0.1.7"
 	}
 }
