--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
 	"dependencies": {
 		"cookie-parser": "~1.4.3",
 		"debug": "~2.6.9",
-		"express": "~4.16.0",
-		"express-session": "^1.15.6",
+		"express": "~4.16.3",
+		"express-session": "~1.15.6",
+		"express-ws": "^3.0.0",
 		"http-errors": "~1.6.2",
 		"morgan": "~1.9.0",
-		"pug": "2.0.0-beta11",
-		"steam-login": "^0.1.7"
+		"pug": "2.0.3",
+		"sourcequery": "0.0.2",
+		"steam-login": "^0.1.7",
+		"ws": "^5.1.1"
 	}
 }
