--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"cookie-parser": "~1.4.3",
 		"debug": "~2.6.9",
 		"express": "~4.16.3",
+		"express-rate-limit": "^2.11.0",
 		"express-session": "~1.15.6",
 		"express-ws": "^3.0.0",
 		"http-errors": "~1.6.2",
