--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"morgan": "~1.9.0",
 		"pug": "2.0.3",
 		"sourcequery": "0.0.2",
+		"spectre.css": "^0.5.1",
 		"steam-login": "^0.1.7",
 		"ws": "^5.1.1"
 	}
