Various code improvements and fixes Refer to .todo for completed tasks

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,7 +15,7 @@
 		{
 			"label": "Sass Compile",
 			"type": "shell",
-			"command": "node-sass style.scss public/css/style.css",
+			"command": "node-sass style.scss public/css/style.css --output-style compressed",
 			"group": {
                 "kind": "build",
                 "isDefault": true
